build/log/idf_py_stderr_output_21560
In file included from /home/ufi/programming/esp-idf/components/esp_hw_support/include/esp_intr_alloc.h:12,
                 from /home/ufi/programming/esp-idf/components/esp_hw_support/include/esp_cpu.h:20,
                 from /home/ufi/programming/esp-idf/components/esp_hw_support/include/spinlock.h:11,
                 from /home/ufi/programming/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos/portmacro.h:49,
                 from /home/ufi/programming/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/portable.h:57,
                 from /home/ufi/programming/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/FreeRTOS.h:69,
                 from /home/ufi/programming/The-One-Ring/main/TheOneRing.c:1:
/home/ufi/programming/The-One-Ring/main/TheOneRing.c: In function 'app_main':
/home/ufi/programming/The-One-Ring/main/TheOneRing.c:53:50: error: 'i' undeclared (first use in this function)
   53 |   ESP_ERROR_CHECK(led_strip_set_pixel(led_strip, i, 255, 255, 255));
      |                                                  ^
/home/ufi/programming/esp-idf/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
/home/ufi/programming/The-One-Ring/main/TheOneRing.c:53:50: note: each undeclared identifier is reported only once for each function it appears in
   53 |   ESP_ERROR_CHECK(led_strip_set_pixel(led_strip, i, 255, 255, 255));
      |                                                  ^
/home/ufi/programming/esp-idf/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/TheOneRing.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5719: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
